--- a/index.html
+++ b/index.html
@@ -3,34 +3,25 @@
 <head>
     <meta charset='utf-8'>
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
-    <title>Voidless™</title>
+    <title>AmDev</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
     <link rel='stylesheet' type='text/css' media='screen' href='style.css'>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
     <script src='script.js'></script>
 </head>
 <body>
-    <section class="showcase">
-        <header>
-          <h2 class="logo"><a href="https://Voidless.gq"><img src="https://raw.githubusercontent.com/Amne-Dev/Voidless/main/.files/V.png" alt=""></a></h2>
-          <div class="toggle"></div>
-        </header>
-        <video src="https://raw.githubusercontent.com/Amne-Dev/Voidless/main/.files/space%20%201%20.mp4" muted loop autoplay></video>
-        <div class="overlay"></div>
-        <div class="text">
-          <h3>The official Voidless hub</h3>
-          <p>The universe is endless and so is entertainment</p>
-          <a href="#media">Explore</a>
-        </div>
-        <ul class="social">
-            <li><a href="#"><img src="https://img.icons8.com/ios/72/youtube-play--v1.png"></a></li>
-          <li><a href="#"><img src="https://i.ibb.co/Wnxq2Nq/twitter.png"></a></li>
-          <li><a href="#"><img src="https://i.ibb.co/ySwtH4B/instagram.png"></a></li>
-        </ul>
-      </section>
-      <section id="smedia">
-        <div id="media">
-            <img id="youtube" href="https://img.icons8.com/ios/344/youtube-play--v1.png">
-        </div>
-      </section>
+<img src="https://raw.githubusercontent.com/Amne-Dev/Voidless/main/.files/bg.jpg" alt="" id="bg">
+    <nav>
+        <h1 id="logo">Voidless</h1>
+        <ul>
+            <li><a href="" id="join">Join</a></li>
+            <li><a href="news.asp">News</a></li>
+            <li><a href="contact.asp">Contact</a></li>
+            <li><a href="about.asp">About</a></li>
+          </ul>
+          
+    </nav>
+
+
 </body>
 </html>
