--- a/index.html
+++ b/index.html
@@ -14,14 +14,12 @@
     <nav>
         <h1 id="logo">Voidless</h1>
         <ul>
-            <li><a href="" id="join">Join</a></li>
-            <li><a href="news.asp">News</a></li>
-            <li><a href="contact.asp">Contact</a></li>
-            <li><a href="about.asp">About</a></li>
+            <li><a href="https://discord.gg/Gv7VcMneXs" id="join">Join</a></li>
+            <li><a href="mailto:amdev@" id="inbox">InBox</a></li>
           </ul>
           
     </nav>
-
+    <section id="landing-page"></section>
 
 </body>
 </html>
