--- a/index.html
+++ b/index.html
@@ -12,14 +12,23 @@
 <body>
 <img src="https://raw.githubusercontent.com/Amne-Dev/Voidless/main/.files/bg.jpg" alt="" id="bg">
     <nav>
-        <h1 id="logo">Voidless</h1>
+        <h1 id="logo">AmBot</h1>
         <ul>
             <li><a href="https://discord.gg/Gv7VcMneXs" id="join">Join</a></li>
-            <li><a href="mailto:amdev@" id="inbox">InBox</a></li>
+            <li><a href="mailto:amdev@engineer.com" id="inbox">InBox</a></li>
           </ul>
           
     </nav>
-    <section id="landing-page"></section>
+    <section id="landing-page">
+        <h2 class="title">Tired of bots requiring you to pay ?</h2>
+        <p class="p-landing">Its time we teach Mee6 and Dyno how Its done <br> No premium No bullshit </p>
+        <center>    
+             <ul id="landing-button">
+            <li><a href="https://discord.gg/Gv7VcMneXs" id="commands">Commands</a></li>
+            <li><a href="mailto:amdev@engineer.com" id="invite">Invite to your Server</a></li>
+          </ul>
+        </center>
+    </section>
 
 </body>
 </html>
