--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset='utf-8'>
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
-    <title>AmDev</title>
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+    <title>AmBot</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
     <link rel='stylesheet' type='text/css' media='screen' href='style.css'>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
@@ -15,7 +16,7 @@
         <h1 id="logo">AmBot</h1>
         <ul>
             <li><a href="https://discord.gg/Gv7VcMneXs" id="join">Join</a></li>
-            <li><a href="mailto:amdev@engineer.com" id="inbox">InBox</a></li>
+            <li><a href="mailto:amdev@engineer.com" id="Inbox">InBox</a></li>
           </ul>
           
     </nav>
@@ -25,7 +26,7 @@
         <center>    
              <ul id="landing-button">
             <li><a href="https://discord.gg/Gv7VcMneXs" id="commands">Commands</a></li>
-            <li><a href="mailto:amdev@engineer.com" id="invite">Invite to your Server</a></li>
+            <li><a href="https://discord.com/oauth2/authorize?client_id=1034780785737203772&scope=bot&permissions=8&response_type=code&redirect_uri=https%3A%2F%2Fwww.ambot.gq" id="invite">Invite to your Server</a></li>
           </ul>
         </center>
     </section>
