--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset='utf-8'>
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
-    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="https://raw.githubusercontent.com/Amne-Dev/AmBot-Website/main/.files/Icon.ico" type="image/x-icon">
     <title>AmBot</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
     <link rel='stylesheet' type='text/css' media='screen' href='style.css'>
@@ -25,7 +25,7 @@
         <p class="p-landing">Its time we teach Mee6 and Dyno how Its done <br> No premium No bullshit </p>
         <center>    
              <ul id="landing-button">
-            <li><a href="https://discord.gg/Gv7VcMneXs" id="commands">Commands</a></li>
+            <li><a href="/Commands" id="commands">Commands</a></li>
             <li><a href="https://discord.com/oauth2/authorize?client_id=1034780785737203772&scope=bot&permissions=8&response_type=code&redirect_uri=https%3A%2F%2Fwww.ambot.gq" id="invite">Invite to your Server</a></li>
           </ul>
         </center>
