--- a/index.html
+++ b/index.html
@@ -31,5 +31,19 @@
         </center>
     </section>
 
+    <section id="our-vision">
+        <img src="https://raw.githubusercontent.com/Amne-Dev/Voidless/main/.files/Icon.png" alt="">
+        <h2 class="title" id="h2-our-vision">Our Vision</h2>
+        <p id="p-our-vision">In the most recent years Amazing bots such as Mee6, Dyno, Carl and many others started converting basic features Into paid premium subscribtions benefits And to fight this we started the AmBot project</p>
+    </section>
+
+    <section id="discord-server">
+        <h2 class="title">Need Support</h2>
+        <p class="p-discord-server">Join our Community with awesome and active members </p>    
+             <ul id="discord-server-button">
+            <li><a href="https://discord.gg/Gv7VcMneXs" id="a-discord-server">Join the Server</a></li>
+          </ul>
+    </section>
+
 </body>
 </html>
