--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
     </section>
 
     <section id="discord-server">
+        <img src="https://raw.githubusercontent.com/Amne-Dev/Voidless/main/.files/discord.png" alt="">
         <h2 class="title">Need Support</h2>
         <p class="p-discord-server">Join our Community with awesome and active members </p>    
              <ul id="discord-server-button">
