--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <h1 id="logo">AmBot</h1>
         <ul>
             <li><a href="https://discord.gg/Gv7VcMneXs" id="join">Join</a></li>
-            <li><a href="mailto:amdev@engineer.com" id="Inbox">InBox</a></li>
+            <li><a href="mailto:amdev@null.net" id="Inbox">InBox</a></li>
           </ul>
           
     </nav>
