--- a/Commands/index.html
+++ b/Commands/index.html
@@ -15,7 +15,7 @@
     <nav>
         <h1 id="logo"><a href="https://www.ambot.gq">AmBot</a></h1>
         <ul>
-            <li><a href="https://discord.gg/Gv7VcMneXs" id="join">Join</a></li>
+            <li><a href="https://discord.gg/9Uw8J6kHBM" id="join">Join</a></li>
             <li><a href="mailto:amdev@null.net" id="Inbox">InBox</a></li>
           </ul>
           
@@ -104,7 +104,7 @@
         <h2 class="title">Need Support</h2>
         <p class="p-discord-server">Join our Community with awesome and active members </p>    
              <ul id="discord-server-button">
-            <li><a href="https://discord.gg/Gv7VcMneXs" id="a-discord-server">Join the Server</a></li>
+            <li><a href="https://discord.gg/9Uw8J6kHBM" id="a-discord-server">Join the Server</a></li>
           </ul>
     </section>
 
