--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <center>    
              <ul id="landing-button">
             <li><a href="/Commands" id="commands">Commands</a></li>
-            <li><a href="https://discord.com/oauth2/authorize?client_id=1034780785737203772&scope=bot&permissions=8&response_type=code&redirect_uri=https%3A%2F%2Fwww.ambot.gq" id="invite">Invite to your Server</a></li>
+            <li><a href="https://discord.com/oauth2/authorize?client_id=1034780785737203772&scope=bot&permissions=2146958847&response_type=code&redirect_uri=https%3A%2F%2Fwww.ambot.gq" id="invite">Invite to your Server</a></li>
           </ul>
         </center>
     </section>
