--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <nav>
         <h1 id="logo">AmBot</h1>
         <ul>
-            <li><a href="https://discord.gg/9Uw8J6kHBM" id="join">Join</a></li>
+            <li><a href="https://discord.gg/9Uw8J6kHBM" id="join">Join the discord</a></li>
             <li><a href="mailto:amdev@null.net" id="Inbox">InBox</a></li>
           </ul>
           
@@ -40,11 +40,16 @@
     <section id="discord-server">
         <img src="https://raw.githubusercontent.com/Amne-Dev/Voidless/main/.files/discord.png" alt="">
         <h2 class="title">Need Support</h2>
-        <p class="p-discord-server">Join our Community with awesome and active members </p>    
+        <p class="p-discord-server">Join our Discord server and connect with other members of our community! Our server is the perfect place to ask questions, get help, and chat with other users. Whether you're a seasoned bot user or just getting started, our friendly community is here to help you out.  </p>    
              <ul id="discord-server-button">
             <li><a href="https://discord.gg/9Uw8J6kHBM" id="a-discord-server">Join the Server</a></li>
           </ul>
     </section>
 
 </body>
+<footer>
+    <div>
+        <button>TOS</button>
+    </div>
+</footer>
 </html>
