Added Terms of Service

--- a/index.html
+++ b/index.html
@@ -48,8 +48,9 @@
 
 </body>
 <footer>
-    <div>
-        <button>TOS</button>
+    <div class="footer-content">
+        <p>&copy; 2023 AmBot Project. All rights reserved.</p>
+        <button onclick="window.location.href='TOS'">Terms of Service</button>
     </div>
 </footer>
 </html>
